// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditTrip /> should render component 1`] = `
<div
  className="edit-review-container limited-width"
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="title"
    >
      Edit story
    </h2>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Title:
      </span>
      <input
        className="form-input "
        name="title"
        onChange={[Function]}
        placeholder="Enter title"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Trip to:
      </span>
      <CountrySelector
        defaultCountry=""
        getSelectedCountry={[Function]}
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Description:
      </span>
      <Editor
        editorClassName="editor-self"
        editorState={Object {}}
        onEditorStateChange={[Function]}
        toolbar={Object {}}
        wrapperClassName="editor-wrapper "
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Duration (days):
      </span>
      <input
        className="form-input "
        name="duration"
        onChange={[Function]}
        placeholder="Enter duration"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Expenses ($):
      </span>
      <input
        className="form-input "
        name="expences"
        onChange={[Function]}
        placeholder="Enter expenses"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <StarsRating
        error=""
        onChange={[Function]}
        rating={0}
      />
    </div>
    <button
      className="add-button"
      disabled={false}
      type="submit"
    >
      Edit story
    </button>
    <div
      className="delete-post"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Delete story
      </div>
    </div>
  </form>
</div>
`;

exports[`<EditTrip /> should render component with postDeleted 1`] = `
<div
  className="edit-review-container limited-width"
>
  <div
    className="red_tag"
  >
    Post Deleted
  </div>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="title"
    >
      Edit story
    </h2>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Title:
      </span>
      <input
        className="form-input "
        name="title"
        onChange={[Function]}
        placeholder="Enter title"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Trip to:
      </span>
      <CountrySelector
        defaultCountry=""
        getSelectedCountry={[Function]}
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Description:
      </span>
      <Editor
        editorClassName="editor-self"
        editorState={Object {}}
        onEditorStateChange={[Function]}
        toolbar={Object {}}
        wrapperClassName="editor-wrapper "
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Duration (days):
      </span>
      <input
        className="form-input "
        name="duration"
        onChange={[Function]}
        placeholder="Enter duration"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Expenses ($):
      </span>
      <input
        className="form-input "
        name="expences"
        onChange={[Function]}
        placeholder="Enter expenses"
        type="number"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <StarsRating
        error=""
        onChange={[Function]}
        rating={0}
      />
    </div>
    <button
      className="add-button"
      disabled={false}
      type="submit"
    >
      Edit story
    </button>
    <div
      className="delete-post"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Delete story
      </div>
    </div>
  </form>
</div>
`;

exports[`<EditTrip /> should render component with updatedTrip and errors 1`] = `
<div
  className="edit-review-container limited-width"
>
  <form
    onSubmit={[Function]}
  >
    <h2
      className="title"
    >
      Edit story
    </h2>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Title:
      </span>
      <input
        className="form-input field-error"
        name="title"
        onChange={[Function]}
        placeholder="Enter title"
        type="text"
        value=""
      />
    </div>
    <div
      className="error"
    >
      title error
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Trip to:
      </span>
      <CountrySelector
        defaultCountry=""
        getSelectedCountry={[Function]}
      />
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Description:
      </span>
      <Editor
        editorClassName="editor-self"
        editorState={Object {}}
        onEditorStateChange={[Function]}
        toolbar={Object {}}
        wrapperClassName="editor-wrapper field-error"
      />
    </div>
    <div
      className="error"
    >
      description error
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Duration (days):
      </span>
      <input
        className="form-input field-error"
        name="duration"
        onChange={[Function]}
        placeholder="Enter duration"
        type="number"
        value=""
      />
    </div>
    <div
      className="error"
    >
      duration error
    </div>
    <div
      className="form_element"
    >
      <span
        className="label"
      >
        Expenses ($):
      </span>
      <input
        className="form-input field-error"
        name="expences"
        onChange={[Function]}
        placeholder="Enter expenses"
        type="number"
        value=""
      />
    </div>
    <div
      className="error"
    >
      expences error
    </div>
    <div
      className="form_element"
    >
      <StarsRating
        error="field-error"
        onChange={[Function]}
        rating={0}
      />
    </div>
    <div
      className="error"
    >
      rating error
    </div>
    <button
      className="add-button"
      disabled={false}
      type="submit"
    >
      Edit story
    </button>
    <div
      className="delete-post"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Delete story
      </div>
    </div>
  </form>
</div>
`;
